results/SVCOMP/conversational/log-ExSymExe15-2024_03_11_05_02_56.txt
class Main {
  static int field;
  static int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    Main inst = new Main();
    field = arg;
    if (field < 0)
      return true;
    return inst.test(x, field, field2);
  }
  
  //@ requires x >= 0 && z >= 0;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> x > z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: non-static method test(int,int,int) cannot be referenced from a static context
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                                       ^
4 errors

class Main {
  private static /*@ spec_public @*/ int field;
  private static /*@ spec_public @*/ int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    Main inst = new Main();
    field = arg;
    if (field < 0)
      return true;
    return inst.test(x, field, field2);
  }
  
  //@ requires x >= 0 && z >= 0;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> x > z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: non-static method test(int,int,int) cannot be referenced from a static context
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                                       ^
1 error

class Main {
  private static /*@ spec_public @*/ int field;
  private static /*@ spec_public @*/ int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0 || new Main().test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    field = arg;
    if (field < 0)
      return true;
    return new Main().test(x, field, field2);
  }
  
  //@ requires x >= 0 && z >= 0;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> x > z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> field < 0 || new Main().test(13000, field, field2);
                                       ^
1 error

class Main {
  private static /*@ spec_public @*/ int field;
  private static /*@ spec_public @*/ int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    field = arg;
    if (field < 0)
      return true;
    Main inst = new Main();
    return inst.test(x, field, field2);
  }
  
  //@ requires x >= 0 && z >= 0;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> x > z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: non-static method test(int,int,int) cannot be referenced from a static context
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                                       ^
1 error

class Main {
  private /*@ spec_public @*/ int field;
  private /*@ spec_public @*/ int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0 || new Main().test(13000, field, field2);
  public boolean f(Short arg) {
    int x = 13000;
    field = arg;
    if (field < 0)
      return true;
    return new Main().test(x, field, field2);
  }
  
  //@ requires x >= 0 && z >= 0;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> x > z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> field < 0 || new Main().test(13000, field, field2);
                                       ^
1 error

class Main {
  private /*@ spec_public @*/ int field;
  private /*@ spec_public @*/ int field2;

  //@ requires arg != null;
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
  public boolean f(Short arg) {
    int x = 13000;
    field = arg;
    if (field < 0)
      return true;
    return test(x, field, field2);
  }
  
  //@ requires x >= 0 && z >= 0;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> x > z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
